--- a/WindowsService1/ReportService.csproj
+++ b/WindowsService1/ReportService.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\Domains\Error.cs" />
     <Compile Include="Models\Domains\Report.cs" />
     <Compile Include="Models\Domains\ReportPosition.cs" />
