--- a/WindowsService1/ReportService.csproj
+++ b/WindowsService1/ReportService.csproj
@@ -51,12 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Models\Domains\Error.cs" />
     <Compile Include="Models\Domains\Report.cs" />
     <Compile Include="Models\Domains\ReportPosition.cs" />
-    <Compile Include="Models\Email.cs" />
-    <Compile Include="Models\EmailParams.cs" />
     <Compile Include="Models\GenerateHtmlEmail.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
@@ -89,6 +86,12 @@
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EmailSender\EmailSender.csproj">
+      <Project>{A942F49A-AE8E-4B0F-BBBE-44A2800FB297}</Project>
+      <Name>EmailSender</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
