--- a/WindowsService1/App.config
+++ b/WindowsService1/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+  <appSettings>
+    <add key="HostSmtp" value="smtp.gmail.com" />
+    <add key="Port" value="587" />
+    <add key="EnableSsl" value="true" />
+    <add key="SenderName" value="Jakub Zięba" />
+    <add key="SenderEmail" value="services.report.new@gmail.com" />
+    <add key="SenderEmailPassword" value="" />
+    <add key="ReceiverEmail" value="jakubzieba7@gmail.com" />
+  </appSettings>
 </configuration>
