--- a/WindowsService1/ReportService.csproj
+++ b/WindowsService1/ReportService.csproj
@@ -84,6 +84,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Cypher\Cypher.csproj">
+      <Project>{5F1B4716-9514-4393-BFC0-067F3275BE9E}</Project>
+      <Name>Cypher</Name>
+    </ProjectReference>
     <ProjectReference Include="..\EmailSender\EmailSender.csproj">
       <Project>{A942F49A-AE8E-4B0F-BBBE-44A2800FB297}</Project>
       <Name>EmailSender</Name>
