--- a/WindowsService1/App.config
+++ b/WindowsService1/App.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
   <appSettings>
     <add key="HostSmtp" value="smtp.gmail.com" />
     <add key="Port" value="587" />
@@ -11,5 +11,8 @@
     <add key="SenderEmail" value="services.report.new@gmail.com" />
     <add key="SenderEmailPassword" value="" />
     <add key="ReceiverEmail" value="jakubzieba7@gmail.com" />
+    <add key="IntervalInMinutes" value="30" />
+    <add key="SendHour" value="8" />
+    <add key="IsSendReport" value="true" />
   </appSettings>
 </configuration>
